2022-12-08T00:24:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3644039932 # 692
* notice: last 14d: unq all: 4 5814
* notice: prev accum: outdated-unq outdated-all / unq all: 1250 93963 / 1271 99717
* notice: next accum: outdated-unq outdated-all / unq all: 1252 94379 / 1272 100193
* notice: prev exec diff / last date diff / accum: unq all: +0 +151 -0 -24 / +4 +422 -0 -0 / 4 422
* notice: removed / changed dates: [2022-11-23] / [2022-11-24 2022-12-07]

2022-12-07T16:02:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640604651 # 691
* notice: last 14d: unq all: 4 5754
* notice: prev accum: outdated-unq outdated-all / unq all: 1250 93963 / 1270 99738
* notice: next accum: outdated-unq outdated-all / unq all: 1250 93963 / 1271 99717
* notice: prev exec diff / last date diff / accum: unq all: +2 +126 -1 -147 / +4 +271 -0 -0 / 4 271
* notice: removed / changed dates: [] / [2022-11-23 2022-12-07]

2022-12-07T08:06:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3636987697 # 690
* notice: last 14d: unq all: 3 5775
* notice: prev accum: outdated-unq outdated-all / unq all: 1250 93963 / 1268 99763
* notice: next accum: outdated-unq outdated-all / unq all: 1250 93963 / 1270 99738
* notice: prev exec diff / last date diff / accum: unq all: +2 +147 -0 -172 / +2 +145 -0 -0 / 2 145
* notice: removed / changed dates: [] / [2022-11-23 2022-12-06 2022-12-07]

2022-12-07T00:26:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3634681318 # 689
* notice: last 14d: unq all: 2 5800
* notice: prev accum: outdated-unq outdated-all / unq all: 1248 93548 / 1268 99297
* notice: next accum: outdated-unq outdated-all / unq all: 1250 93963 / 1268 99763
* notice: prev exec diff / last date diff / accum: unq all: +0 +149 -0 -30 / +1 +415 -0 -0 / 1 415