@@ -1,8 +1,8 @@
 {
   "timestamp" : "2022-12-08T08:06:50Z",
-  "count" : 215,
-  "count_minmax" : [ 143, 417 ],
-  "count_decinc" : [ -202, +417 ],
+  "count" : 144,
+  "count_minmax" : [ 144, 144 ],
+  "count_decinc" : [ -0, +144 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
