@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-12-08T00:24:39Z",
+  "timestamp" : "2022-12-08T08:06:50Z",
   "count_outdated" : 94379,
   "uniques_outdated" : 1252,
-  "count" : 100193,
-  "uniques" : 1272,
+  "count" : 100159,
+  "uniques" : 1274,
   "clones" : [
     {
       "timestamp": "2022-11-24T00:00:00Z",
-      "count": 393,
+      "count": 215,
       "count_minmax": [ 143, 417 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
@@ -102,6 +102,13 @@
       "count_minmax": [ 145, 422 ],
       "uniques": 4,
       "uniques_minmax": [ 2, 4 ]
+    },
+    {
+      "timestamp": "2022-12-08T00:00:00Z",
+      "count": 144,
+      "count_minmax": [ 144, 144 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
