@@ -1,10 +1,10 @@
 {
-  "count": 5814,
+  "count": 5780,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-11-24T00:00:00Z",
-      "count": 393,
+      "count": 215,
       "uniques": 2
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-12-07T00:00:00Z",
       "count": 422,
       "uniques": 4
+    },
+    {
+      "timestamp": "2022-12-08T00:00:00Z",
+      "count": 144,
+      "uniques": 2
     }
   ]
 }
