@@ -1,3 +1,11 @@
+2022-12-08T08:06:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3646426109 # 693
+* notice: last 14d: unq all: 4 5780
+* notice: prev accum: outdated-unq outdated-all / unq all: 1252 94379 / 1272 100193
+* notice: next accum: outdated-unq outdated-all / unq all: 1252 94379 / 1274 100159
+* notice: prev exec diff / last date diff / accum: unq all: +2 +144 -0 -178 / +2 +144 -0 -0 / 2 144
+* notice: removed / changed dates: [] / [2022-11-24 2022-12-08]
+
 2022-12-08T00:24:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3644039932 # 692
 * notice: last 14d: unq all: 4 5814
